<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_account_activity_relative_layout_overall"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background_colour"
    android:orientation="vertical"
    tools:context=".RegisterAccountActivity">

    <ScrollView
        android:id="@+id/register_account_activity_scroll_view_overall"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/register_account_activity_linear_layout_for_logo_and_welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/register_account_activity_zoyinc_powered_comics_logo_dsp"
                android:contentDescription="@string/zoyinc_powered_comics_logo_description"
                android:src="@drawable/zoyincpoweredcomics_logo"
                android:layout_width="match_parent"
                android:layout_height="235dp"
                android:layout_gravity="center"
                android:paddingTop="30dp"
                android:paddingBottom="10dp"/>

            <TextView
                android:id="@+id/register_account_activity_heading"
                android:text="@string/register_account_activity_main_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="30dp"
                android:maxLines="1"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:autoSizeTextType="uniform"
                android:textAppearance="@style/Widget.AppCompat.Spinner.Underlined"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/register_account_activity_login_subheading_txt_view"
                android:text="@string/register_account_activity_subheading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="2dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="15dp"
                android:maxLines="1"
                android:textColor="@color/black"
                android:autoSizeTextType="uniform"
                android:textAppearance="@style/Widget.AppCompat.Spinner.Underlined"
                android:gravity="center_horizontal"/>



            <LinearLayout
                android:id="@+id/register_account_activity_linear_layout_for_user_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/userName_txt_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:padding="10dp"
                    android:background="@drawable/primary_edit_text_background"
                    android:hint="@string/full_name_etext_input_hint"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/userEmail_txt_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:background="@drawable/primary_edit_text_background"
                    android:hint="@string/email_address_etext_input_hint"
                    android:imeActionLabel="@string/email_address_etext_actionlabel"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/userPassword_txt_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:background="@drawable/primary_edit_text_background"
                    android:hint="@string/password_etext_input_hint"
                    android:imeActionLabel="@string/password_etext_actionlabel"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/black"/>



            </LinearLayout>

            <LinearLayout
                android:id="@+id/register_account_activity_linear_layout_for_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">


                <Button
                    android:id="@+id/register_account_activity_register_account_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/primary_button_background"
                    android:text="@string/register_txt"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />


                <Button
                    android:id="@+id/register_account_activity_cancel_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/primary_button_background"
                    android:text="Cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/register_account_activity_linear_layout_for_reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="3dp">

                <TextView
                    android:id="@+id/register_account_disclosure_dsp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="8dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/black"
                    android:text="@string/account_registration_disclosure"
                    android:textSize="15dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>