<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/issuestatuschangerq_activity_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintCircleRadius="20dp"
    android:background="@color/primary_background_colour"
    android:orientation="vertical"
    tools:context=".InventoryStatusChangeRqActivity">

    <LinearLayout
        android:id="@+id/issueinventory_activity_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintCircleRadius="20dp">

        <TextView
            android:id = "@+id/inventory_status_change_activity_main_heading"
            android:text="@string/inventorystatuschangerq_activity_main_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:autoSizeMaxTextSize="30dp"
            android:autoSizeTextType="uniform"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:padding="10dp"
            android:textAppearance="@style/Widget.AppCompat.Spinner.Underlined"
            android:textColor="@color/black"
            android:textSize="23dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/inventorystatuschange_activity_subheading"
            android:text="Are you sure you want to ${} a ${} from Zoyinc Powered Comics?"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:autoSizeMaxTextSize="16dp"
            android:autoSizeTextType="uniform"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="8dp"
            android:textColor="@color/black"
            android:textSize="15dp"/>



        <LinearLayout
            android:id="@+id/inventory_status_change_activity_linear_layout_for_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">


            <Button
                android:id="@+id/inventory_status_change_activity_confirm_change_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/primary_button_background"
                android:text="@string/yes_text_txt"
                android:textAllCaps="false"
                android:textColor="@color/white" />


            <Button
                android:id="@+id/inventory_status_change_activity_cancel_change_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/primary_button_background"
                android:text="@string/cancel_txt"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>


    </LinearLayout>


</ScrollView>
