<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginsuccessful_activity_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background_colour"
    android:orientation="vertical"
    tools:context=".LoginSuccessfulActivity">


    <ScrollView
        android:id="@+id/loginsuccessful_activity_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/loginsuccessful_activity_linear_layout_for_logo_and_welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/loginsuccessful_activity_zoyinc_powered_comics_logo_dsp"
                android:contentDescription="@string/zoyinc_powered_comics_logo_description"
                android:src="@drawable/zoyincpoweredcomics_logo"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:paddingTop="30dp" />


            <TextView
                android:id="@+id/loginsuccessful_activity_main_heading"
                android:text="@string/loginsuccessful_activity_main_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:autoSizeTextType="uniform"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingTop="2dp"
                android:paddingRight="10dp"
                android:textAppearance="@style/Widget.AppCompat.Spinner.Underlined"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/loginsuccessful_activity_subheading"
                android:text="@string/loginsuccessful_activity_sub_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:autoSizeMaxTextSize="16dp"
                android:autoSizeTextType="uniform"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black"
                android:textSize="30dp"/>

            <TextView
                android:id="@+id/loginsuccessful_activity_signed_in_description"
                android:text="@string/loginsuccessful_activity_signed_in_txt_dsp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:autoSizeMaxTextSize="20dp"
                android:autoSizeMinTextSize="16dp"
                android:autoSizeTextType="uniform"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/loginsuccessful_activity_signed_in_email_dsp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:autoSizeMaxTextSize="20dp"
                android:autoSizeMinTextSize="16dp"
                android:autoSizeTextType="uniform"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/main_activity_stock_heading_dsp"
                android:text="@string/main_activity_inventory_stock_heading_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:autoSizeMaxTextSize="25dp"
                android:autoSizeTextType="uniform"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:paddingTop="10dp"
                android:textAppearance="@style/Widget.AppCompat.Spinner.Underlined"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/main_activity_stock_sub_heading_dsp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:autoSizeMaxTextSize="20dp"
                android:autoSizeMinTextSize="1dp"
                android:autoSizeTextType="uniform"
                android:gravity="center_horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/main_activity_inventory_stock_sub_heading_txt"
                android:textColor="@color/black" />


            <TextView
                android:id="@+id/loginsuccessful_activity_item_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingTop="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:textAppearance="@style/Widget.AppCompat.Spinner.Underlined"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/loginsuccessful_activity_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:textAppearance="@style/Widget.AppCompat.Spinner.Underlined"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/loginsuccessful_activity_item_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:textAppearance="@style/Widget.AppCompat.Spinner.Underlined"
                android:textSize="15dp" />

        </LinearLayout>


    </ScrollView>

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_toolbar_background"
        android:paddingTop="5dp">

        <ImageButton
            android:id="@+id/loginsuccessful_activity_login_successful_page_btn"
            android:src="@drawable/home_icon"
            android:background="@drawable/bottom_toolbar_buttons_background"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="left"
            android:layout_margin="2dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"/>

        <ImageButton
            android:id="@+id/loginsuccessful_activity_restock_inventory_page_btn"
            android:src="@drawable/restock_icon"
            android:background="@drawable/bottom_toolbar_buttons_background"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_margin="2dp"
            android:paddingRight="10dp"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/loginsuccessful_activity_issue_books_page_btn"
            android:src="@drawable/issue_book_icon"
            android:background="@drawable/bottom_toolbar_buttons_background"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="2dp"
            android:adjustViewBounds="true"
            android:paddingRight="10dp"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/loginsuccessful_activity_return_books_page_btn"
            android:src="@drawable/return_book_icon"
            android:background="@drawable/bottom_toolbar_buttons_background"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="2dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"/>

        <ImageButton
            android:id="@+id/loginsuccessful_activity_view_account_page_btnv"
            android:src="@drawable/user_profile_icon"
            android:background="@drawable/bottom_toolbar_buttons_background_circular"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="right"
            android:paddingRight="10dp"
            android:layout_margin="2dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter" />
    </androidx.appcompat.widget.Toolbar>
</RelativeLayout>